--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,6 +25,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
 
+        <FrameLayout
+                android:id="@+id/reveal_container"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+
         <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:id="@+id/add_fab"
                 style="?attr/styleFab"
