--- a/app/src/main/res/layout/include_toolbar_note.xml
+++ b/app/src/main/res/layout/include_toolbar_note.xml
@@ -28,54 +28,41 @@
                 app:contentInsetStartWithNavigation="56dp"
                 app:popupTheme="?attr/themePopup">
 
-            <androidx.cardview.widget.CardView
+            <FrameLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/layout_8dp"
-                    android:layout_marginLeft="@dimen/layout_8dp"
-                    android:layout_marginEnd="@dimen/layout_0dp"
-                    android:layout_marginRight="@dimen/layout_0dp"
-                    app:cardBackgroundColor="?attr/clBackgroundEnter"
-                    app:cardCornerRadius="@dimen/radius_8dp"
-                    app:cardUseCompatPadding="false">
+                    android:layout_marginEnd="@dimen/layout_24dp"
+                    android:layout_marginRight="@dimen/layout_24dp">
 
-                <FrameLayout
+                <EditText
+                        android:id="@+id/name_enter"
+                        style="@style/ToolbarNote.Enter"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:padding="@dimen/layout_8dp">
+                        android:hint="@string/hint_enter_name"
+                        android:importantForAutofill="noExcludeDescendants"
+                        android:text='@={noteItem.name}'
+                        android:visibility='@{keyEdit ? v.VISIBLE : v.GONE}'
+                        tools:targetApi="o"
+                        tools:text="@string/test_note_name"/>
 
-                    <EditText
-                            android:id="@+id/name_enter"
-                            style="@style/ToolbarNote.Enter"
-                            android:hint="@string/hint_enter_name"
-                            android:importantForAutofill="noExcludeDescendants"
-                            android:paddingLeft="@dimen/layout_8dp"
-                            android:paddingRight="@dimen/layout_8dp"
-                            android:text='@={noteItem.name}'
-                            android:visibility='@{keyEdit ? v.VISIBLE : v.GONE}'
-                            tools:targetApi="o"
-                            tools:text="@string/test_note_name"/>
+                <HorizontalScrollView
+                        style="@style/ToolbarNote.Scroll"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:visibility='@{!keyEdit ? v.VISIBLE : v.GONE}'
+                        tools:visibility="invisible">
 
-                    <HorizontalScrollView
-                            style="@style/ToolbarNote.Scroll"
-                            android:layout_width="match_parent"
+                    <TextView
+                            style="@style/ToolbarNote.Text"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:clipToPadding="false"
-                            android:paddingLeft="@dimen/layout_8dp"
-                            android:paddingRight="@dimen/layout_8dp"
-                            android:visibility='@{!keyEdit ? v.VISIBLE : v.GONE}'
-                            tools:visibility="invisible">
+                            android:hint="@string/hint_view_name"
+                            android:text='@{noteItem.name}'/>
 
-                        <TextView
-                                style="@style/ToolbarNote.Text"
-                                android:hint="@string/hint_view_name"
-                                android:text='@{noteItem.name}'/>
+                </HorizontalScrollView>
 
-                    </HorizontalScrollView>
-
-                </FrameLayout>
-
-            </androidx.cardview.widget.CardView>
+            </FrameLayout>
 
         </androidx.appcompat.widget.Toolbar>
 
