--- a/app/src/main/res/values/styles_toolbar_note.xml
+++ b/app/src/main/res/values/styles_toolbar_note.xml
@@ -3,17 +3,15 @@
 
     <style name="ToolbarNote"/>
 
-    <style name="ToolbarNote.Enter" parent="EditText">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
+    <style name="ToolbarNote.Enter" parent="TextAppearance.Widget.AppCompat.Toolbar.Title">
         <item name="android:background">@android:color/transparent</item>
         <item name="android:imeOptions">actionNext|flagNoFullscreen</item>
         <item name="android:inputType">textCapSentences|textAutoCorrect|textAutoComplete</item>
-        <item name="android:textSize">@dimen/text_18sp</item>
         <item name="android:maxLength">@integer/length_note_name</item>
         <item name="android:maxLines">1</item>
         <item name="android:scrollHorizontally">true</item>
-        <item name="android:textStyle">bold</item>
+        <item name="android:textAppearance">@style/Appearance.Main</item>
+        <item name="android:textColorHint">?attr/clContentSecond</item>
     </style>
 
     <style name="ToolbarNote.Scroll">
@@ -22,16 +20,14 @@
         <item name="android:scrollbars">none</item>
     </style>
 
-    <style name="ToolbarNote.Text" parent="EditText">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
+    <style name="ToolbarNote.Text" parent="TextAppearance.Widget.AppCompat.Toolbar.Title">
         <item name="android:layout_gravity">center_vertical</item>
         <item name="android:background">@android:color/transparent</item>
         <item name="android:maxLength">@integer/length_note_name</item>
         <item name="android:maxLines">1</item>
+        <item name="android:textAppearance">@style/Appearance.Main</item>
+        <item name="android:textColorHint">?attr/clContentSecond</item>
         <item name="android:textIsSelectable">true</item>
-        <item name="android:textSize">@dimen/text_18sp</item>
-        <item name="android:textStyle">bold</item>
     </style>
 
 </resources>
