--- a/app/src/main/res/menu/sheet_add.xml
+++ b/app/src/main/res/menu/sheet_add.xml
@@ -5,11 +5,11 @@
         <menu>
             <group android:checkableBehavior="single">
 
-                <item android:id="@+id/note_text_item"
-                      android:title="@string/dialog_add_note_text"/>
+                <item android:id="@+id/item_add_note"
+                      android:title="@string/dialog_add_text"/>
 
-                <item android:id="@+id/note_roll_item"
-                      android:title="@string/dialog_add_note_roll"/>
+                <item android:id="@+id/item_add_roll"
+                      android:title="@string/dialog_add_roll"/>
 
             </group>
         </menu>
