--- a/app/src/main/res/values-ru/strings_app.xml
+++ b/app/src/main/res/values-ru/strings_app.xml
@@ -77,8 +77,8 @@
     <string name="dialog_menu_convert_to_text">Конвертировать в текст</string>
     <string name="dialog_menu_convert_to_roll">Конвертировать в список</string>
 
-    <string name="dialog_add_note_text">Текст</string>
-    <string name="dialog_add_note_roll">Список</string>
+    <string name="dialog_add_text">Текст</string>
+    <string name="dialog_add_roll">Список</string>
 
     <string-array name="dialog_menu_text">
         <item />
