--- a/app/src/main/res/menu/activity_main.xml
+++ b/app/src/main/res/menu/activity_main.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:id="@+id/page_rank_item"
+    <item android:id="@+id/item_page_rank"
           android:icon="@drawable/ic_rank"
           android:title="@string/title_rank"/>
 
-    <item android:id="@+id/page_notes_item"
+    <item android:id="@+id/item_page_notes"
           android:icon="@drawable/ic_note"
           android:title="@string/title_notes"/>
 
-    <item android:id="@+id/page_bin_item"
+    <item android:id="@+id/item_page_bin"
           android:icon="@drawable/ic_bin"
           android:title="@string/title_bin"/>
 
