--- a/app/src/main/res/menu/fragment_bin.xml
+++ b/app/src/main/res/menu/fragment_bin.xml
@@ -4,7 +4,7 @@
       xmlns:tools="http://schemas.android.com/tools"
       tools:ignore="AlwaysShowAction">
 
-    <item android:id="@+id/clear_item"
+    <item android:id="@+id/item_clear"
           android:icon="@drawable/ic_clear"
           android:title="@string/menu_page_bin_clear"
           app:showAsAction="always"/>
