--- a/app/src/main/res/values/strings_app.xml
+++ b/app/src/main/res/values/strings_app.xml
@@ -83,8 +83,8 @@
     <string name="dialog_menu_restore">Restore</string>
     <string name="dialog_menu_clear">Delete forever</string>
 
-    <string name="dialog_add_note_text">Text</string>
-    <string name="dialog_add_note_roll">List</string>
+    <string name="dialog_add_text">Text</string>
+    <string name="dialog_add_roll">List</string>
 
     <string-array name="dialog_menu_text">
         <item />
