Разбор id, добавление Assert UI в тестах

--- a/app/src/main/res/layout-v21/include_toolbar_rank.xml
+++ b/app/src/main/res/layout-v21/include_toolbar_rank.xml
@@ -19,7 +19,7 @@
             android:stateListAnimator="@null">
 
         <androidx.appcompat.widget.Toolbar
-                android:id="@+id/toolbar"
+                android:id="@+id/toolbar_rank_container"
                 style="?attr/styleToolbar"
                 app:contentInsetEnd="@dimen/layout_8dp"
                 app:contentInsetStart="@dimen/layout_8dp"
@@ -37,7 +37,7 @@
                         android:layout_height="wrap_content">
 
                     <ImageButton
-                            android:id="@+id/cancel_button"
+                            android:id="@+id/toolbar_rank_cancel_button"
                             style="@style/Enter.Button"
                             android:contentDescription="@null"
                             app:boolExpression='@{nameNotEmpty}'
@@ -48,7 +48,7 @@
                             tools:tint="?attr/clDisable"/>
 
                     <EditText
-                            android:id="@+id/rank_enter"
+                            android:id="@+id/toolbar_rank_enter"
                             style="@style/Enter.Text"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
@@ -62,7 +62,7 @@
                             tools:targetApi="o"/>
 
                     <ImageButton
-                            android:id="@+id/add_button"
+                            android:id="@+id/toolbar_rank_add_button"
                             style="@style/Enter.Button"
                             android:contentDescription="@null"
                             app:srcCompat="@drawable/ic_rank"
