--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,7 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/main_parent_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
@@ -16,17 +17,18 @@
             android:layout_weight="1">
 
         <FrameLayout
+                android:id="@+id/main_toolbar_holder"
                 android:layout_width="match_parent"
                 android:layout_height="?actionBarSize"
                 android:background="?attr/colorPrimary"/>
 
         <FrameLayout
-                android:id="@+id/fragment_container"
+                android:id="@+id/main_fragment_container"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/add_fab"
+                android:id="@+id/main_add_fab"
                 style="?attr/styleFab"
                 app:srcCompat="@drawable/ic_add"
                 app:useCompatPadding="false"/>
@@ -34,7 +36,7 @@
     </FrameLayout>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:id="@+id/menu_navigation"
+            android:id="@+id/main_menu_navigation"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="?attr/clPrimary"
