--- a/app/src/main/res/layout/fragment_roll_note.xml
+++ b/app/src/main/res/layout/fragment_roll_note.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
->
+        xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -24,6 +23,7 @@
     </data>
 
     <LinearLayout
+            android:id="@+id/roll_note_parent_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
@@ -34,13 +34,13 @@
                 app:noteItem='@{noteItem}'/>
 
         <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/roll_recycler"
+                android:id="@+id/roll_note_recycler"
                 style="@style/RecyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"/>
 
-        <include layout="@layout/include_roll_enter"
+        <include layout="@layout/include_roll_note_enter"
                  app:enterEmpty='@{enterEmpty}'
                  app:keyEdit='@{keyEdit}'/>
 
