--- a/app/src/main/res/layout-v21/include_toolbar.xml
+++ b/app/src/main/res/layout-v21/include_toolbar.xml
@@ -8,7 +8,7 @@
         android:stateListAnimator="@null">
 
     <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
+            android:id="@+id/toolbar_container"
             style="?attr/styleToolbar"
             app:popupTheme="?attr/themePopup"/>
 
