--- a/app/src/main/res/layout-v21/include_toolbar_note.xml
+++ b/app/src/main/res/layout-v21/include_toolbar_note.xml
@@ -21,7 +21,7 @@
             android:stateListAnimator="@null">
 
         <androidx.appcompat.widget.Toolbar
-                android:id="@+id/toolbar"
+                android:id="@+id/toolbar_note_container"
                 style="?attr/styleToolbar"
                 app:contentInsetEnd="@dimen/layout_8dp"
                 app:contentInsetLeft="@dimen/layout_8dp"
@@ -36,7 +36,7 @@
                     android:layout_marginEnd="@dimen/layout_24dp">
 
                 <EditText
-                        android:id="@+id/name_enter"
+                        android:id="@+id/toolbar_note_enter"
                         style="@style/ToolbarNote.Enter"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -48,6 +48,7 @@
                         tools:text="@string/test_note_name"/>
 
                 <HorizontalScrollView
+                        android:id="@+id/toolbar_note_scroll"
                         style="@style/ToolbarNote.Scroll"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -55,6 +56,7 @@
                         tools:visibility="invisible">
 
                     <TextView
+                            android:id="@+id/toolbar_note_text"
                             style="@style/ToolbarNote.Text"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -68,7 +70,7 @@
         </androidx.appcompat.widget.Toolbar>
 
         <View
-                android:id="@+id/color_view"
+                android:id="@+id/toolbar_note_color_view"
                 style="@style/NoteItem.Color.Horizontal"
                 app:visibleOn='@{def.dark}'
                 tools:background="@color/note_red_dark"
