--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -3,6 +3,7 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/intro_parent_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
@@ -21,7 +22,7 @@
             android:layout_height="wrap_content">
 
         <com.rd.PageIndicatorView
-                android:id="@+id/page_indicator"
+                android:id="@+id/intro_page_indicator"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -36,7 +37,7 @@
                 app:piv_viewPager="@id/intro_pager"/>
 
         <Button
-                android:id="@+id/info_end_button"
+                android:id="@+id/intro_end_button"
                 style="@style/Base.Widget.AppCompat.Button.Borderless"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
