--- a/app/src/main/res/layout/fragment_rank.xml
+++ b/app/src/main/res/layout/fragment_rank.xml
@@ -14,6 +14,7 @@
     </data>
 
     <LinearLayout
+            android:id="@+id/rank_parent_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
