--- a/app/src/main/res/layout/include_info.xml
+++ b/app/src/main/res/layout/include_info.xml
@@ -14,7 +14,7 @@
     </data>
 
     <LinearLayout
-            android:id="@+id/info_container"
+            android:id="@+id/info_parent_container"
             style="@style/Info.Container">
 
         <ImageView
