--- a/app/src/main/res/layout/include_item_note_info.xml
+++ b/app/src/main/res/layout/include_item_note_info.xml
@@ -14,18 +14,21 @@
     </data>
 
     <LinearLayout
+            android:id="@+id/note_info_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/layout_8dp"
             android:orientation="horizontal">
 
         <ImageView
+                android:id="@+id/note_info_rank_image"
                 style="@style/NoteItem.Indicator.Info"
                 android:contentDescription="@null"
                 android:visibility='@{noteItem.rankId.size == 0 ? v.GONE : v.VISIBLE}'
                 app:srcCompat="@drawable/ic_rank"/>
 
         <ImageView
+                android:id="@+id/note_info_bind_image"
                 style="@style/NoteItem.Indicator.Info"
                 android:contentDescription="@null"
                 android:src='@{noteItem.type == def.text ? @drawable/ic_bind_text : @drawable/ic_bind_roll}'
@@ -33,6 +36,7 @@
                 tools:srcCompat="@drawable/ic_bind_roll"/>
 
         <TextView
+                android:id="@+id/note_info_progress_text"
                 style="@style/NoteItem.Info"
                 android:layout_width="wrap_content"
                 android:text='@{noteItem.type == def.roll ? noteItem.text : ""}'
@@ -41,6 +45,7 @@
                 tools:visibility="visible"/>
 
         <TextView
+                android:id="@+id/note_info_change_text"
                 style="@style/NoteItem.Info"
                 android:layout_width="0dp"
                 android:layout_weight="1"
@@ -48,6 +53,7 @@
                 tools:text="@string/test_note_time"/>
 
         <TextView
+                android:id="@+id/note_info_create_text"
                 style="@style/NoteItem.Info"
                 android:layout_width="wrap_content"
                 app:time='@{noteItem.create}'
