--- a/app/src/main/res/layout/include_note_panel.xml
+++ b/app/src/main/res/layout/include_note_panel.xml
@@ -29,8 +29,8 @@
             android:id="@+id/note_panel_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            tools:layout_gravity="center">
 
         <View style="@style/Divider.Horizontal"/>
 
