--- a/app/src/main/res/layout/include_roll_note_enter.xml
+++ b/app/src/main/res/layout/include_roll_note_enter.xml
@@ -14,12 +14,13 @@
     </data>
 
     <LinearLayout
-            android:id="@+id/enter_container"
+            android:id="@+id/roll_note_enter_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="?attr/clPrimary"
             android:orientation="vertical"
-            android:visibility='@{keyEdit ? v.VISIBLE : v.GONE}'>
+            android:visibility='@{keyEdit ? v.VISIBLE : v.GONE}'
+            tools:layout_gravity="center">
 
         <View style="@style/Divider.Horizontal"
               android:layout_marginLeft="@dimen/layout_4dp"
@@ -32,7 +33,7 @@
                 android:padding="@dimen/layout_4dp">
 
             <EditText
-                    android:id="@+id/roll_enter"
+                    android:id="@+id/roll_note_enter"
                     style="@style/Enter.Text"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -45,7 +46,7 @@
                     tools:targetApi="o"/>
 
             <ImageButton
-                    android:id="@+id/add_button"
+                    android:id="@+id/roll_note_add_button"
                     style="@style/Enter.Button"
                     android:layout_gravity="bottom"
                     android:contentDescription="@null"
