--- a/app/src/main/res/layout/include_toolbar_note.xml
+++ b/app/src/main/res/layout/include_toolbar_note.xml
@@ -20,7 +20,7 @@
             app:elevation="@dimen/elevation_0dp">
 
         <androidx.appcompat.widget.Toolbar
-                android:id="@+id/toolbar"
+                android:id="@+id/toolbar_note_container"
                 style="?attr/styleToolbar"
                 android:layout_gravity="center"
                 android:paddingLeft="@dimen/layout_8dp"
@@ -35,7 +35,7 @@
                     android:layout_marginRight="@dimen/layout_24dp">
 
                 <EditText
-                        android:id="@+id/name_enter"
+                        android:id="@+id/toolbar_note_enter"
                         style="@style/ToolbarNote.Enter"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -47,6 +47,7 @@
                         tools:text="@string/test_note_name"/>
 
                 <HorizontalScrollView
+                        android:id="@+id/toolbar_note_scroll"
                         style="@style/ToolbarNote.Scroll"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -54,6 +55,7 @@
                         tools:visibility="invisible">
 
                     <TextView
+                            android:id="@+id/toolbar_note_text"
                             style="@style/ToolbarNote.Text"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -67,7 +69,7 @@
         </androidx.appcompat.widget.Toolbar>
 
         <View
-                android:id="@+id/color_view"
+                android:id="@+id/toolbar_note_color_view"
                 style="@style/NoteItem.Color.Horizontal"
                 app:visibleOn='@{def.dark}'
                 tools:background="@color/note_red_dark"
