--- a/app/src/main/res/layout/item_sort.xml
+++ b/app/src/main/res/layout/item_sort.xml
@@ -15,18 +15,20 @@
     </data>
 
     <LinearLayout
-            android:id="@+id/click_container"
+            android:id="@+id/sort_click_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="?attr/selectableItemBackground">
 
         <ImageView
+                android:id="@+id/sort_bracket_left_image"
                 style="@style/SortItem.Bracket"
                 android:contentDescription="@null"
                 android:visibility='@{position == sortEnd ? v.VISIBLE : v.INVISIBLE}'
                 app:srcCompat="@drawable/ic_bracket_left"/>
 
         <TextView
+                android:id="@+id/sort_text"
                 style="@style/SortItem.Text"
                 android:text='@{sortItem.text}'
                 app:boolExpression='@{position &lt;= sortEnd}'
@@ -36,10 +38,12 @@
                 tools:textColor="?attr/clAccent"/>
 
         <ImageView
+                android:id="@+id/sort_bracket_right_image"
                 style="@style/SortItem.Bracket"
                 android:contentDescription="@null"
                 android:visibility='@{position == sortEnd ? v.VISIBLE : v.INVISIBLE}'
                 app:srcCompat="@drawable/ic_bracket_right"/>
 
     </LinearLayout>
+
 </layout>
