--- a/app/src/main/res/layout-v21/include_toolbar_note.xml
+++ b/app/src/main/res/layout-v21/include_toolbar_note.xml
@@ -45,7 +45,7 @@
                         android:text='@={noteItem.name}'
                         android:visibility='@{keyEdit ? v.VISIBLE : v.GONE}'
                         tools:targetApi="o"
-                        tools:text="@string/test_note_name"/>
+                        tools:text="@string/preview_note_name"/>
 
                 <HorizontalScrollView
                         android:id="@+id/toolbar_note_scroll"
